# exhale

./: .bumpversion.cfg  .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  appversion.py  build_installer.bat  build_installer.sh  bump.sh  element.py  exhale.py  exhale_qt.py  exhalewindow.py  listwidgets.py  pyproject.toml  run_exhale.py  setup.py  version_bump.sh  win_build.py
.github/workflows/: build.yml
cluster_analysis/: __init__.py  xrf_general_functions.py  xrf_interface.py
exhale/: __main__.py  analysisdialog.py  analysisutils.py  analysisworker.py  appversion.py  copyfigure.py  element.py  elementsettings.py  exceptiondialog.py  exhale.py  exhale_qt.py  exhalewindow.py  filesettings.py  imagecompose.py  imagecomposer.py  imagedialog.py  imagesettings.py  listwidgets.py  naparihelper.py  overridecursor.py  projectio.py
exhale/cluster_analysis/: xrf_clustering.py  xrf_interface.py  xrf_main.py
exhale/resources/: analysisdialog.ui  exhale_qt.ui  exhale_splash.xcf  imagedialog.ui
exhale/resources/ui/: exhale_qt.ui  imagedialog.ui
exhale/xrf_refcopy/: xrf_element_channel.py  xrf_other_channel.py  xrf_sample_class.py  xrf_utils.py
packaging/: build_icons.py  exhale.iss  exhale.spec  meta.yaml  win_build.py
packaging/hooks/: hook-exhale.py  hook-fabio.py  hook-silx.py
packaging/icons/: lungs.icns
recipe/: exhale.iss  exhale.spec  meta.yaml
recipe/hooks/: hook-napari.py  hook-silx.py  hook-vispy.py
