[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name="exhale"
#dynamic = ["version"]
version = "v1.1.3"
authors=[
    {name="Carl Troein", email="carl.troein@cec.lu.se"},
    {name="Tom Delaire"},
    {name="Emanuel Larsson"},
    {name="Bryan Falcones"},
    {name="Karina Thånell"}
]
description="EXHALE, Efficient X-ray Hub Aiding Lung Explorations"
readme="README.md"
requires-python = ">= 3.8"
dependencies = [
    'numpy', 'scipy', 'matplotlib', 'scikit-learn', 'pandas', 'h5py', 'napari',
    'silx', 'csbdeep', 'pyqt5', 'matplotlib-scalebar'
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
#include = ['exhale']
#where = ['.']

[tool.setuptools.package-data]
"exhale" = ['*.ui', '*.ico', '*.svg', '*.json', '*.h5']

[tool.setuptools.dynamic]
version = {attr = "exhale.appversion.exhale_version"}

[project.urls]
Homepage="https://github.com/ctroein/exhale"

[project.scripts]
exhale = "exhale.exhale:main"
