[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name="exhale"
dynamic = ["version"]
authors=[
    {name="Carl Troein", email="carl.troein@cec.lu.se"},
    {name="Tom Delaire"},
    {name="Emanuel Larsson"},
    {name="Bryan Falcones"},
    {name="Karina Thånell"}
]
description="EXHALE, Efficient X-ray Hub Aiding Lung Explorations"
license = { file = "LICENSE" }
classifiers = [ "License :: OSI Approved :: MIT License" ]
readme="README.md"
requires-python = ">= 3.10"
dependencies = [
    'numpy',
    'scipy',
    'matplotlib',
    'scikit-learn',
    'pandas',
    'h5py',
    'napari',
    'imageio',
    'silx',
    'csbdeep',
    'pyqt5',
    'matplotlib-scalebar',
    "tensorflow==2.15.*; sys_platform == 'win32'",
    "tensorflow; sys_platform != 'win32'",
    'stardist',
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
#include = ['exhale']
#where = ['.']

[tool.setuptools.package-data]
"exhale" = [
  "resources/icons/*.svg",
  "resources/icons/*.png",
  "resources/models/2D_versatile_fluo_copy/*",
]

[project.urls]
Homepage="https://github.com/ctroein/exhale"

[project.scripts]
exhale = "exhale.exhale:main"
